--- a/trunk/AlarmGitai/OptionPreview.xib
+++ b/trunk/AlarmGitai/OptionPreview.xib
@@ -120,6 +120,20 @@
 							<string key="NSResourceName">week.png</string>
 						</object>
 					</object>
+					<object class="IBUIImageView" id="691271275">
+						<reference key="NSNextResponder" ref="191373211"/>
+						<int key="NSvFlags">256</int>
+						<string key="NSFrame">{{0, 188}, {180, 100}}</string>
+						<reference key="NSSuperview" ref="191373211"/>
+						<bool key="IBUIOpaque">NO</bool>
+						<bool key="IBUIClipsSubviews">YES</bool>
+						<int key="IBUIContentMode">4</int>
+						<bool key="IBUIMultipleTouchEnabled">YES</bool>
+						<object class="NSCustomResource" key="IBUIImage">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">time2.png</string>
+						</object>
+					</object>
 				</object>
 				<string key="NSFrameSize">{180, 270}</string>
 				<reference key="NSSuperview"/>
@@ -175,19 +189,27 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">timeView</string>
-						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="1071950965"/>
-					</object>
-					<int key="connectionID">18</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">weekView</string>
 						<reference key="source" ref="372490531"/>
 						<reference key="destination" ref="884735652"/>
 					</object>
 					<int key="connectionID">20</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">timeView_12</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="1071950965"/>
+					</object>
+					<int key="connectionID">21</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">timeView_24</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="691271275"/>
+					</object>
+					<int key="connectionID">23</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -206,12 +228,13 @@
 						<reference key="object" ref="191373211"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="290960051"/>
 							<reference ref="735145596"/>
 							<reference ref="101337499"/>
 							<reference ref="1071950965"/>
 							<reference ref="170811894"/>
 							<reference ref="884735652"/>
+							<reference ref="691271275"/>
+							<reference ref="290960051"/>
 						</object>
 						<reference key="parent" ref="189108144"/>
 					</object>
@@ -256,6 +279,11 @@
 						<reference key="object" ref="884735652"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">22</int>
+						<reference key="object" ref="691271275"/>
+						<reference key="parent" ref="191373211"/>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -264,7 +292,6 @@
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<string>-1.CustomClassName</string>
 					<string>-2.CustomClassName</string>
-					<string>1.CustomClassName</string>
 					<string>1.IBEditorWindowLastContentRect</string>
 					<string>1.IBPluginDependency</string>
 				</object>
@@ -272,7 +299,6 @@
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<string>OptionPreview</string>
 					<string>UIResponder</string>
-					<string>CharUIView</string>
 					<string>{{484, 419}, {180, 270}}</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				</object>
@@ -297,19 +323,11 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">20</int>
+			<int key="maxID">23</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<bool key="EncodedWithXMLCoder">YES</bool>
-				<object class="IBPartialClassDescription">
-					<string key="className">CharUIView</string>
-					<string key="superclassName">UIView</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">Classes/CharView.h</string>
-					</object>
-				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">OptionPreview</string>
 					<string key="superclassName">UIViewController</string>
@@ -321,11 +339,13 @@
 							<string>back_v</string>
 							<string>charView</string>
 							<string>dateView</string>
-							<string>timeView</string>
+							<string>timeView_12</string>
+							<string>timeView_24</string>
 							<string>weekView</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>id</string>
 							<string>id</string>
 							<string>id</string>
 							<string>id</string>
